[project]
name = "hwg-ste-to-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv==0.9.9",
    "psycopg2==2.9.10",
    "pycryptodome==3.23.0",
    "python-dotenv==1.1.1",
    "requests>=2.31.0",
    "snmp==0.8.1",
]
