[project]
name = "hwg-ste-to-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2025.8.3",
    "dotenv==0.9.9",
    "influxdb-client==1.49.0",
    "psycopg2==2.9.10",
    "pycryptodome==3.23.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "reactivex==4.0.4",
    "requests>=2.31.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "snmp==0.8.1",
    "typing-extensions==4.14.1",
    "urllib3==2.5.0",
]
